<resources>
    <string name="app_name">Profile</string>
    <string name="txt_header">Dave</string>
    <string name="txt_camption">Dave on a Helicopter</string>
    <string name="btn_view">View Profile</string>
    <string name="txt_bio">Dave is a US Army Veteran and Digital Media Adjunct Instructor.
        He teaches Digital Video Production and Game Design.</string>
    <string name="btn_back">Back</string>
</resources>
